--- a/bower.json
+++ b/bower.json
@@ -5,6 +5,7 @@
     "ionic": "ionic-team/ionic-bower#1.3.4"
   },
   "dependencies": {
-    "preloader.css3": "^1.0.2"
+    "preloader.css3": "^1.0.2",
+    "angular-loading": "^0.1.4"
   }
 }
